@@ -1,4 +1,10 @@
 package fr.insee.pearljam.batch.service;
+import fr.insee.pearljam.batch.campaign.CommunicationTemplateType;
+import fr.insee.pearljam.batch.dao.CommunicationTemplateDaoImpl;
+import fr.insee.pearljam.batch.sampleprocessing.Campagne.Questionnaires.Questionnaire;
+import fr.insee.pearljam.batch.sampleprocessing.Campagne.Questionnaires.Questionnaire.InformationsGenerales;
+import fr.insee.pearljam.batch.sampleprocessing.Campagne.Questionnaires.Questionnaire.InformationsGenerales.MetadonneesCommunication.CommunicationTemplate;
+import fr.insee.pearljam.batch.sampleprocessing.Campagne.Questionnaires.Questionnaire.InformationsGenerales.MetadonneesCommunication;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -6,9 +12,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.sql.SQLException;
 import java.text.ParseException;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import javax.xml.parsers.ParserConfigurationException;
@@ -45,30 +49,33 @@ import fr.insee.queen.batch.object.SurveyUnit;
 import fr.insee.queen.batch.service.LoadService;
 
 /**
- * Launcher Service : this service contains all steps of Batch : 
- * - Validate 
+ * Launcher Service : this service contains all steps of Batch :
+ * - Validate
  * - Load
  * - Clean & reset contents
- * 
+ *
  * @author bclaudel
- * 
+ *
  */
 @Service
 public class PilotageLauncherService {
 
 	@Autowired
 	AnnotationConfigApplicationContext context;
-	
+
 	@Autowired
 	PilotageFolderService pilotageFolderService;
-	
+
+	@Autowired
+	private CommunicationTemplateDaoImpl communicationTemplateDaoImpl;
+
 	private static final Logger logger = LogManager.getLogger(PilotageLauncherService.class);
 	private static final String CAMPAIGN_PATH_IN = "/campaign/campaign.xml";
 	private static final String SAMPLE_PATH_IN = "/sample/sample.xml";
 
 	/**
 	 * Global function that structure the batch execution depends on batchOption
-	 * 
+	 *
 	 * @param batchOption
 	 * @param folderIn
 	 * @param folderOut
@@ -76,7 +83,7 @@ public class PilotageLauncherService {
 	 * @throws BatchException
 	 * @throws IOException
 	 * @throws ValidateException
-	 * @throws XMLStreamException 
+	 * @throws XMLStreamException
 	 */
 	public BatchErrorCode validateLoadClean(BatchOption batchOption, String folderIn, String folderOut) throws IOException, ValidateException, XMLStreamException {
 		BatchErrorCode returnCode = BatchErrorCode.OK;
@@ -90,8 +97,10 @@ public class PilotageLauncherService {
 						XmlUtils.validateXMLSchema(Constants.MODEL_CONTEXT, folderIn + "/" + name +".xml");
 						break;
 					case DELETECAMPAIGN:
+						XmlUtils.validateXMLSchema(Constants.MODEL_DELETE_CAMPAIGN, folderIn + "/" + name +".xml");
+						break;
 					case EXTRACT:
-						XmlUtils.validateXMLSchema(Constants.MODEL_CAMPAIGN, folderIn + "/" + name +".xml");
+						XmlUtils.validateXMLSchema(Constants.MODEL_EXTRACT_CAMPAIGN, folderIn + "/" + name +".xml");
 						break;
 					case SAMPLEPROCESSING:
 						XmlUtils.validateXMLSchema(Constants.MODEL_SAMPLEPROCESSING, folderIn + "/" + name +".xml");
@@ -127,7 +136,7 @@ public class PilotageLauncherService {
 			returnCode = BatchErrorCode.OK_FONCTIONAL_WARNING;
 		}
 		return returnCode;
-		
+
 	}
 
 	/**
@@ -136,54 +145,53 @@ public class PilotageLauncherService {
 	 * @return the reference name of batch execution
 	 */
 	private String getName(BatchOption batchOption) {
-		switch(batchOption) {
-			case DELETECAMPAIGN:
-				return Constants.CAMPAIGN_TO_DELETE;
-			case EXTRACT:
-				return Constants.CAMPAIGN_TO_EXTRACT;
-			case LOADCONTEXT:
-				return Constants.CONTEXT;
-			case SAMPLEPROCESSING:
-				return Constants.SAMPLEPROCESSING;
-			default:
-				return null;
-		}
+		return switch (batchOption) {
+			case DELETECAMPAIGN -> Constants.CAMPAIGN_TO_DELETE;
+			case EXTRACT -> Constants.CAMPAIGN_TO_EXTRACT;
+			case LOADCONTEXT -> Constants.CONTEXT;
+			case SAMPLEPROCESSING -> Constants.SAMPLEPROCESSING;
+			default -> null;
+		};
 	}
 
-	
+
 	/**
 	 * Call load function depends on batchOption
-	 * 
+	 *
 	 * @param batchOption
 	 * @param in
 	 * @param out
 	 * @return BatchErrorCode
-	 * @throws IOException 
-	 * @throws SynchronizationException 
-	 * @throws ValidateException 
-	 * @throws DataBaseException 
-	 * @throws SQLException 
-	 * @throws BatchException 
-	 * @throws SAXException 
-	 * @throws ParserConfigurationException 
-	 * @throws Exception 
-	 * @throws ParseException 
+	 * @throws IOException
+	 * @throws SynchronizationException
+	 * @throws ValidateException
+	 * @throws DataBaseException
+	 * @throws SQLException
+	 * @throws BatchException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws Exception
+	 * @throws ParseException
 	 */
 	public BatchErrorCode load(BatchOption batchOption, String in, String out, String processing) throws SQLException, DataBaseException, ValidateException, SynchronizationException, IOException, BatchException, ParserConfigurationException, SAXException {
 		switch(batchOption) {
+			// Delete campaign
 			case DELETECAMPAIGN:
 				return deleteCampaign(in, out);
+			// extract campaign data
 			case EXTRACT:
 				return extractCampaign(in, out);
+			// Create context when empty database
 			case LOADCONTEXT:
 				return loadContext(in);
+			// Create/Update survey units
 			case SAMPLEPROCESSING:
 				return loadSampleProcessing(in, processing);
 			default:
 				return null;
 		}
 	}
-	
+
 	/**
 	 * Global function of clean and reset.
 	 * Filenames depends on return code and batchOption
@@ -198,7 +206,7 @@ public class PilotageLauncherService {
 	 */
 	public BatchErrorCode cleanAndReset(String name, String in, String out, String processing, BatchErrorCode returnCode, BatchOption batchOption) throws IOException, ValidateException {
 		String fileName = getFileName(name, batchOption, returnCode);
-		
+
 		String location;
 		String processedFilename = pilotageFolderService.getFilename();
 		if(( batchOption==BatchOption.SAMPLEPROCESSING) && !processedFilename.isBlank()) {
@@ -207,9 +215,9 @@ public class PilotageLauncherService {
 		else {
 			location = in;
 		}
-		
+
 		File file = new File(location);
-		
+
 		if(file.exists()) {
 			Path temp = Files.move(Paths.get(location),
 					Paths.get(out + "/" + fileName));
@@ -229,10 +237,10 @@ public class PilotageLauncherService {
 		}
 		return returnCode;
 	}
-  
+
 	private String getFileName(String name, BatchOption batchOption, BatchErrorCode returnCode) throws ValidateException {
 		String ending = getEnding(returnCode) ;
-		  
+
 		String designation = null;
 		String finalName = name;
 		switch(batchOption) {
@@ -262,7 +270,7 @@ public class PilotageLauncherService {
 
 	private String getEnding(BatchErrorCode returnCode) throws ValidateException {
 		switch(returnCode) {
-		case KO_TECHNICAL_ERROR: 
+		case KO_TECHNICAL_ERROR:
 		case KO_FONCTIONAL_ERROR:
 			return "error.xml";
 		case OK_TECHNICAL_WARNING:
@@ -275,7 +283,7 @@ public class PilotageLauncherService {
 		}
 	}
 
-	public void moveFileToProcessing(String name, String in, 
+	public void moveFileToProcessing(String name, String in,
 		  String processing, String campaignId) throws IOException {
 	  	String fileName = "";
 	  	fileName = new StringBuilder(name)
@@ -292,7 +300,7 @@ public class PilotageLauncherService {
 			Paths.get(processing + "/" + fileName));
 			if (temp != null) {
 				logger.log(Level.INFO, Constants.MSG_FILE_MOVE_SUCCESS, fileName);
-				
+
 			} else {
 				logger.log(Level.ERROR, Constants.MSG_FAILED_MOVE_FILE);
 			}
@@ -303,7 +311,7 @@ public class PilotageLauncherService {
 
 	/**
 	 * Specific function for delete Campaign
-	 * 
+	 *
 	 * @param in
 	 * @param out
 	 * @return BatchErrorCode
@@ -327,10 +335,10 @@ public class PilotageLauncherService {
 			throw new ValidateException(Constants.ERROR_CAMPAIGN_NULL);
 		}
 	}
-	
+
 	/**
 	 * Specific function for extract Campaign
-	 * 
+	 *
 	 * @param in
 	 * @param out
 	 * @return BatchErrorCode
@@ -354,10 +362,10 @@ public class PilotageLauncherService {
 			throw new ValidateException(Constants.ERROR_CAMPAIGN_NULL);
 		}
 	}
-	
+
 	/**
 	 * Specific function for load Context
-	 * 
+	 *
 	 * @param in
 	 * @return BatchErrorCode
 	 * @throws SQLException
@@ -374,28 +382,33 @@ public class PilotageLauncherService {
 			throw new ValidateException("Error : context is null");
 		}
 	}
-	
+
 	public BatchErrorCode loadSampleProcessing(String in, String processing) throws ParserConfigurationException, SAXException, IOException, ValidateException, BatchException, SynchronizationException, SQLException {
 		BatchErrorCode returnCode = BatchErrorCode.OK;
 		CampaignService pilotageCampaignService = context.getBean(CampaignService.class);
 		LoadService dataCollectionloadService = context.getBean(LoadService.class);
-				
+
 		// Move SampleProcessing File to processing folder and unmarshall
 		pilotageFolderService.setCampaignName(in);
 		moveFileToProcessing("sampleprocessing", in, processing, pilotageFolderService.getCampaignName());
 		Campagne sampleProcessing = XmlUtils.xmlToObject(processing + "/" + pilotageFolderService.getFilename(), Campagne.class);
 		logger.log(Level.INFO, "SampleProcessing file parsed");
-		
+
 		// Extract campaignId, list of steps and list of survey-unit id from sampleprocessing
 		String campaignId = sampleProcessing.getIdSource() + sampleProcessing.getMillesime() + sampleProcessing.getIdPeriode();
 		List<String> steps = sampleProcessing.getSteps().getStep().stream().map(Step::getName).collect(Collectors.toList());
-		List<String> surveyUnits = sampleProcessing.getQuestionnaires().getQuestionnaire().stream().map(su -> su.getInformationsGenerales().getUniteEnquetee().getIdentifiant()).collect(Collectors.toList());
-		
+		List<String> surveyUnits = sampleProcessing
+				.getQuestionnaires()
+				.getQuestionnaire()
+				.stream()
+				.map(Campagne.Questionnaires.Questionnaire::getIdInterrogation)
+				.toList();
+
 		logger.log(Level.INFO, "Start split sample processing content");
 		Map<String, SurveyUnit> mapDataCollectionSu = extractAndValidateDatacollectionFromSamplProcessing(steps, campaignId, sampleProcessing);
 		Map<String, SurveyUnitType> mapPilotageSu = extractAndValidatePilotageFromSamplProcessing(steps, campaignId, sampleProcessing);
 		logger.log(Level.INFO, "End split sample processing content");
-		
+
 		// Create or update survey-units on pilotage and/or data-collection
 		boolean pilotageValidate;
 		SurveyUnitType oldSu;
@@ -428,7 +441,7 @@ public class PilotageLauncherService {
 				returnCode = BatchErrorCode.OK_FONCTIONAL_WARNING;
 			}
 		}
-		
+
 		// Move files in out folder
 		moveFilesInOutFolders(returnCode);
 		return returnCode;
@@ -437,7 +450,7 @@ public class PilotageLauncherService {
 
 	private void moveFilesInOutFolders(BatchErrorCode returnCode) throws IOException, ValidateException {
 		if(new File(ApplicationConfig.FOLDER_IN_QUEEN + SAMPLE_PATH_IN).exists()) {
-			Files.move(Paths.get(ApplicationConfig.FOLDER_IN_QUEEN + SAMPLE_PATH_IN), 
+			Files.move(Paths.get(ApplicationConfig.FOLDER_IN_QUEEN + SAMPLE_PATH_IN),
 					Paths.get(new StringBuilder(ApplicationConfig.FOLDER_OUT_QUEEN)
 					.append("/sample/")
 					.append("sample")
@@ -445,10 +458,10 @@ public class PilotageLauncherService {
 					.append(PathUtils.getTimestampForPath())
 					.append(".")
 					.append(getEnding(returnCode)).toString()));
-			
+
 		}
 		if(new File(ApplicationConfig.FOLDER_IN + CAMPAIGN_PATH_IN).exists()) {
-			Files.move(Paths.get(ApplicationConfig.FOLDER_IN + CAMPAIGN_PATH_IN), 
+			Files.move(Paths.get(ApplicationConfig.FOLDER_IN + CAMPAIGN_PATH_IN),
 					Paths.get(new StringBuilder(ApplicationConfig.FOLDER_OUT)
 							.append("/campaign/")
 							.append("campaign")
@@ -469,6 +482,28 @@ public class PilotageLauncherService {
 			logger.log(Level.INFO, "Campaign {} does not exist in Pilotage", campaignId);
 			throw new ValidateException("Campaign does not exist in Pilotage DB");
 		}
+
+		Set<String> expectedMeshuggahIds = sampleProcessing.getQuestionnaires().getQuestionnaire().stream()
+				.flatMap(q -> Optional.ofNullable(q)
+						.map(Questionnaire::getInformationsGenerales)
+						.map(InformationsGenerales::getMetadonneesCommunication)
+						.map(MetadonneesCommunication::getCommunicationTemplate).stream().flatMap(Collection::stream))
+				.map(CommunicationTemplate::getMeshuggahId)
+							.collect(Collectors.toSet());
+
+		Set<String> dbMeshuggahIds = communicationTemplateDaoImpl.findByCampaign(campaignId).stream()
+				.map(CommunicationTemplateType::getMeshuggahId)
+				.collect(Collectors.toSet());
+
+		expectedMeshuggahIds.removeAll(dbMeshuggahIds);
+
+		if (!expectedMeshuggahIds.isEmpty()) {
+			logger.warn("The following meshuggahIds are not linked to campaign {}: {}", campaignId, expectedMeshuggahIds);
+			throw new ValidateException("Some communication templates are not linked to the campaign.");
+		}
+
+
+
 		logger.log(Level.INFO, "Extract Pilotage content");
 		Campaign pilotageCampaign = PilotageMapper.mapSampleProcessingToPilotageCampaign(sampleProcessing);
 		XmlUtils.objectToXML(ApplicationConfig.FOLDER_IN + CAMPAIGN_PATH_IN, pilotageCampaign);
